# clippie

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt
clippie/: __init__.py  image.py  model.py  nn.py  serialiser.py  tokeniser.py  util.py
clippie/scripts/: convert_vocab_file.py  convert_weights_file.py
tests/: test_image.py  test_model.py  test_nn.py  test_serialiser.py  test_tokeniser.py  test_util.py  test_with_mypy.py
